--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   background: linear-gradient(90deg, #02121b, #165580);
   color: #fff;
   font-family: 'Segoe UI', sans-serif;
-  overflow-x: hidden;
+  overflow-x: hidden!important;
 }
 ::-webkit-scrollbar{
   width: 6px;
@@ -36,6 +36,21 @@ body {
   font-size: 25px;
   animation: blink 0.8s infinite;
 }
+.box-fadeup {
+  border-radius: 18px;
+  opacity: 0;
+  transform: translateY(100px) scale(0.85);
+  filter: blur(12px);
+  transition:
+    opacity 0.8s ease,
+    transform 0.8s cubic-bezier(.22,1,.36,1),
+    filter 0.8s ease;
+}
+.box-fadeup.show {
+  opacity: 1;
+  transform: translateY(0) scale(1);
+  filter: blur(0);
+}
 @keyframes blink{
   0%{
     opacity: 1;
@@ -66,6 +81,16 @@ body {
   }
   to{
     box-shadow:  0 0 5px #fff;
+  }
+}
+@keyframes fadeup{
+  form{
+    opacity: 0;
+    transform: translateY(40px) scale(0.5);
+  }
+  to{
+    opacity: 1;
+    transform: translateY(0) scale(1);
   }
 }
 .navbar {
@@ -190,7 +215,6 @@ background: linear-gradient(90deg, #02121b, #165580);
 .custom-photo{
   background-color: #02121b;
   border-radius: 12px;
-  box-shadow: 0 0 6px 0.1px #00c6ff;
 }
 .custom-photo .skill-photo{
   padding: 10px;
@@ -199,6 +223,7 @@ background: linear-gradient(90deg, #02121b, #165580);
   border-radius: 12px;
   text-align: center;
   box-shadow: 0 0 6px 0.1px #00c6ff;
+  margin: 10px;
 }
 .custom-photo .skill-photo p{
   font-size: 24px;
@@ -274,9 +299,10 @@ background: linear-gradient(90deg, #02121b, #165580);
   margin-top: 20px;
   border-radius: 12px;
   box-shadow: 0 0 4px 1px #fff;
-    width: 50vw;
+  width: 55vw;
   height: auto;
   transition: 0.3s;
+  margin-left: 10px;
 }
 .project-photo:hover{
   transition: 0.3s;
