--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   background: #00c6ff;
   border-radius: 5px;
 }
+/* Animations are start here */
 .wrapper{
   font-size: 20px;
   letter-spacing: 2px;
@@ -36,19 +37,72 @@ body {
   font-size: 25px;
   animation: blink 0.8s infinite;
 }
+/* Entring from bottom */
 .box-fadeup {
   border-radius: 18px;
   opacity: 0;
   transform: translateY(100px) scale(0.85);
   filter: blur(12px);
+  display: inline-block;
   transition:
     opacity 0.8s ease,
-    transform 0.8s cubic-bezier(.22,1,.36,1),
+    transform 1500ms cubic-bezier(.22,1,.36,1),
     filter 0.8s ease;
 }
 .box-fadeup.show {
   opacity: 1;
   transform: translateY(0) scale(1);
+  filter: blur(0);
+}
+/* Entring form right */
+.box-fade-right {
+  border-radius: 18px;
+  opacity: 0;
+  transform: translateX(100px) scale(0.85);
+  filter: blur(12px);
+  display: inline-block;
+  transition:
+    opacity 0.8s ease,
+    transform 1500ms cubic-bezier(.22,1,.36,1),
+    filter 0.8s ease;
+}
+.box-fade-right.show {
+  opacity: 1;
+  transform: translateX(0) scale(1);
+  filter: blur(0);
+}
+/* Entrign form top */
+.box-fadein {
+  border-radius: 18px;
+  opacity: 0;
+  transform: translateY(-100px) scale(0.85);
+  filter: blur(12px);
+  display: inline-block;
+  transition:
+    opacity 0.8s ease,
+    transform 1500ms cubic-bezier(.22,1,.36,1),
+    filter 0.8s ease;
+}
+.box-fadein.show {
+  opacity: 1;
+  transform: translateY(0) scale(1);
+  filter: blur(0);
+}
+/* Entring from left */
+.box-fade-left {
+  border-radius: 18px;
+  opacity: 0;
+  transform: translateX(-100px) scale(0.85);
+  filter: blur(12px);
+  display: inline-block;
+  transition:
+    opacity 0.8s ease,
+    transform 1500ms cubic-bezier(.22,1,.36,1),
+    filter 0.8s ease;
+}
+.box-fade-left.show {
+  opacity: 1;
+  transform: translateX(0) scale(1);
   filter: blur(0);
 }
 @keyframes blink{
@@ -93,6 +147,7 @@ body {
     transform: translateY(0) scale(1);
   }
 }
+/* End of animations */
 .navbar {
   direction: ltr ;  
   background: rgba(27, 90, 124,0.8);
@@ -222,8 +277,7 @@ background: linear-gradient(90deg, #02121b, #165580);
   box-sizing: border-box;
   border-radius: 12px;
   text-align: center;
-  box-shadow: 0 0 6px 0.1px #00c6ff;
-  margin: 10px;
+  margin: 35px;
 }
 .custom-photo .skill-photo p{
   font-size: 24px;
@@ -354,6 +408,7 @@ textarea::placeholder, .contact-comment::placeholder{
   background-color: #12394d;
   border-radius: 12px;
 }
+
 .footer{
   background: linear-gradient(90deg,#165580,#02121b)!important;
 }
